2017-XX-XX  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.4
	* Fixed:
		- Fixed redirected output on older OSes mangling newline
		- Fixed not having enough rights to query process token even with debug privileges
	* Changed:
		- Better wording in results output
		- Improved performance - faster searches and kills
	* Added:
		- /usr switch (kill by user name)
		- /wnd switch (kill by window title)
		- /mem switch (kill by memory usage)
		- 'strict' parameter for /fsc switch
		- 'ffwd' parameter for /lst switch
		- 'reset' parameter for /lst switch
	* Removed:
		- 'sub' parameter for /cmd switch (temporary - will be returned in future versions)

2017-06-04  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.3
	* Fixed:
		- Removed odd debug output in /cmd
		- Fixed crash on exit when /cmd:sub is used
	* Changed:
		- Windowless verbose output (message box) is now topmost and has input focus
	* Added:
		- +c/-c setting (close process)
		- +e/-e setting (expand environment variables)
		- /end switch (unconditionally return positive result)
		- /psh switch (push argument to argumet stack)
		- /pop switch (pop argument from argument stack)
		- 'parent' parameter for /pid switch

2017-01-17  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.2
	* Fixed:
		- Fixed duplicated "NOT found" message with /inr switch
		- Fixed possible crash when using /mod, /gld, /d3d and /ogl switches

2016-10-22  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.1
	* Changed:
		- Redesigned /inr and /fgd switches
		- Added short delay after /bpp
		- Revamped output
		- Arguments starting with '#' or '\0' are now ignored
		- Path comparing now omits backslash from globbing
		- /sec now indifferent to loop (+l/-l), ignore (+i/-i) and new negate (+n/-n) settings
		- Test setting (+t/-t) now doesn't mark result processes as killed
		- Process times are now queried on demand - when switches need them
	* Fixed:
		- Fixed sending ENTER to wrong console for windowless (hidden) version
	* Added: